# cmpe275

./: .gitignore  README.md
labs/basic/: .cproject  .project  CMakeLists.txt  README.md
labs/basic/Modules/: FindSimpleAmqpClient.cmake
labs/basic/src/: CMakeLists.txt
labs/basic/src/apps/: hello.cpp
labs/basic/src/stuff/: aclass.cpp  aclass.hpp  bclass.hpp
labs/basic/test/: demoapp.cpp
labs/hello/: CMakeLists.txt  README.md  hello-cout.cpp  hello-omp.cpp  hello-target.cpp
labs/loop/: README.md  build.sh  loop-clang  loop-gcc  loop-plain  loop.cpp
labs/matrix/: CMakeLists.txt
labs/matrix/src/: matrix.cpp
labs/parser/: README.md  parser.cpp
labs/pi/: CMakeLists.txt  README.md
labs/pi/src/: CMakeLists.txt  mp-pi4.cpp  pi.cpp
labs/round/: .project  CMakeLists.txt  README.md  round-ex.cpp  round-ex2.cpp
mini/: parser.cpp
mini1/: Collision.cpp  Collision.h  Main.cpp  SpatialAnalysis.cpp  SpatialAnalysis.h  Test.cpp  main  main1  main2  test1
mini1/AOB/: CMakeLists.txt  SpatialAnalysis.cpp  SpatialAnalysis.h  main1  test1
mini1/AOB/main1.dSYM/Contents/Resources/DWARF/: main1
mini1/AOB/main1.dSYM/Contents/Resources/Relocations/aarch64/: main1.yml
mini1/AOB/parser/: CSV.cpp  CSV.h  test.csv
mini1/OBA/: Main.cpp  SpatialAnalysis.cpp  SpatialAnalysis.h  Test.cpp  main2  test2
mini1/OBA/main2.dSYM/Contents/Resources/DWARF/: main2
mini1/OBA/main2.dSYM/Contents/Resources/Relocations/aarch64/: main2.yml
mini1/OBA/parser/: CSV.cpp  CSV.h
mini1/parser/: CSV.cpp  CSV.h  CSVParser.cpp  CSVParser.h  CSVRow.cpp  CSVRow.h  parser  parser.cpp
mini2/: CMakeLists.txt  config_template.json  mini2-scatter.md
mini2/configs/distributed_testing_1/: config_A.json  config_B.json  config_C.json
mini2/configs/local_testing/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
mini2/cpp/include/parser/: CSV.h
mini2/cpp/src/: server.cpp
mini2/cpp/src/parser/: CSV.cpp
mini2/proto/: mini2.proto
mini2/python/src/: client.py  mini2_pb2.py  mini2_pb2_grpc.py
mini3/: mini3-replication.md  readme.md  run_all.py
mini3/client/: client.py
mini3/configs/distributed_testing/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
mini3/configs/distributed_testing_1/: config_D.json
mini3/configs/local_testing/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
mini3/proto/: crash.proto  crash_pb2.py  crash_pb2_grpc.py
mini3/server/: dummyserver.py  server.py
